--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,22 +6,41 @@ body {
 .card {
   width: 400px;
   background: #fff;
+  padding: 8px;
   margin: 16px auto;
+}
+
+.title,
+.button-container {
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  margin: 0;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 16px 8px;
+  /* margin-top: 8px;
+  margin-bottom: 8px; */
+  margin: 8px 0;
 }
 
 .button-container {
   background: #e3f4ff;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+  text-align: center; /* void with flex */
 }
 
 button {
   background: white;
+  display: block; /* void with flex */
+  padding: 8px 24px;
   border: 1px solid #eee;
+  margin: 0 auto; /* void with flex */
 }
