--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,6 +2,33 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.wraper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+article {
+  display: flex;
+  gap: 52px;
+}
+
+.barberry,
+.chili,
+.pepper,
+.saffron {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 200px;
+}
+
+.text {
+  margin-top: 8px;
+  text-align: center;
+}
+
 img {
   width: 100px;
   height: 100px;
@@ -10,6 +37,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  align-self: center;
 }
 
 /* do not edit this footer */
