--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,58 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header,
+.content,
+.footer,
+ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.content {
+  flex-direction: column;
+  align-items: center;
+}
+
+.header,
+.footer {
+  justify-content: space-between;
+}
+
+.footer {
+  background: #eee;
+}
+
+.left-links,
+.right-links,
+.buttons {
+  margin: 16px;
+  display: flex;
+  gap: 16px;
+}
+
+.buttons {
+  margin: 8px;
+  gap: 8px;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  color: #6a6868;
+  text-decoration: none;
+}
+
+a:hover {
+  color: black;
 }
 
 img {
@@ -16,12 +68,13 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
   border: 1px solid #ddd;
-  border-radius: 16px;
+  border-radius: 8px;
   padding: 8px 24px;
   width: 400px;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
