--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,78 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.header {
-  height: 72px;
+header,
+.midwraper,
+.sidebar,
+article,
+footer {
+  display: flex;
+}
+
+header,
+footer {
+  height: 64px;
+  padding: 0 16px;
+  align-items: center;
+}
+
+header {
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: bolder;
 }
 
-.footer {
-  height: 72px;
+footer {
   background: #eee;
   color: darkmagenta;
+  justify-content: center;
+}
+
+.midwraper {
+  flex: auto;
 }
 
 .sidebar {
-  width: 300px;
+  width: 200px;
+  min-width: fit-content;
   background: royalblue;
   box-sizing: border-box;
+  padding: 16px;
+}
+
+article {
+  padding: 8px;
+  min-width: 320px;
+  flex-wrap: wrap;
+  gap: 8px;
+  justify-content: center;
+  flex: 1;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
+  flex: 0 0 300px;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+a {
+  font-size: 18px;
+  text-decoration: none;
+  color: white;
 }
